# bunkershell

./: Cargo.toml  README.md
docs/: project_plan.md
src/: ai.rs  base.rs  main.rs
src/ai/: llm_manager.rs
src/base/: bunkershell.rs  input_processor.rs
src/core/: bunkershell.rs
