[package]
name = "bunkershell"
version = "0.1.0"
edition = "2021"
description = "A secure shell with AI capabilities"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1"

# CLI and user interaction
clap = { version = "4.5", features = ["derive"] }

# For future ML/NLP capabilities
# onnxruntime = { version = "0.7", features = ["load-dynamic"] }

[dev-dependencies]
tokio-test = "0.4"
